Fixed routes and authentication access to dashboard