@@ -1,31 +1,11 @@
 package Controller;
 
+import spark.utils.IOUtils;
+
 import java.io.InputStream;
-import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
-//OLD HTMLRenderer
-//public class HTMLRenderer {
-//
-//    public static String render(String htmlPath) {
-//        try (InputStream is =
-//                     HTMLRenderer.class.getResourceAsStream(htmlPath)) {
-//
-//            if (is == null) {
-//                throw new RuntimeException("HTML file not found: " + htmlPath);
-//            }
-//
-//            return new String(is.readAllBytes(), StandardCharsets.UTF_8);
-//
-//        } catch (Exception e) {
-//            throw new RuntimeException(e);
-//        }
-//    }
-//}
 
-
-
-//New HTMLRender
 public class HTMLRenderer {
 
     public static String render(String htmlPath) {
@@ -38,9 +18,8 @@ public class HTMLRenderer {
                 throw new RuntimeException("HTML file not found: " + htmlPath);
             }
 
-            String html = new String(is.readAllBytes(), StandardCharsets.UTF_8);
+            String html = IOUtils.toString(is);
 
-            // Replace {{key}} placeholders with values
             for (Map.Entry<String, Object> entry : model.entrySet()) {
                 String placeholder = "{{" + entry.getKey() + "}}";
                 String value = entry.getValue() != null ? entry.getValue().toString() : "";
@@ -48,7 +27,6 @@ public class HTMLRenderer {
             }
 
             return html;
-
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
